# image-processing

./: CMakeLists.txt  README.md
src/: main.cpp
src/kernels/: test.cl
